--- a/client/src/styling/userstats.css
+++ b/client/src/styling/userstats.css
@@ -11,3 +11,9 @@
   margin-bottom: 10px;
   color: #333;
 }
+
+.user-stats-placeholder {
+  text-align: center;
+  color: #666;
+  margin-top: 2rem;
+}
